src/test/ui/where-clauses/where-clause-method-substituion.stderr
error[E0277]: the trait bound `X: Foo<X>` is not satisfied
  --> $DIR/where-clause-method-substituion.rs:20:7
   |
LL |     1.method::<X>();
   |       ^^^^^^ the trait `Foo<X>` is not implemented for `X`
   |
note: required by a bound in `Bar::method`
  --> $DIR/where-clause-method-substituion.rs:6:34
   |
LL |     fn method<B>(&self) where A: Foo<B>;
   |                                  ^^^^^^ required by this bound in `Bar::method`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
